--- a/earlybirds/index.html
+++ b/earlybirds/index.html
@@ -598,7 +598,7 @@
                                 </h2>
                         </div>
 
-                        <!-- <div id="collapse_1" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_1" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                                 <div class="card-body">
                                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                     squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -609,7 +609,7 @@
                                     butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                     nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                 </div>
-                            </div> -->
+                            </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -623,7 +623,7 @@
                                 </h2>
                         </div>
 
-                        <!-- <div id="collapse_2" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_2" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                 <div class="card-body">
                                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                     squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -634,7 +634,7 @@
                                     butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                     nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                 </div>
-                            </div> -->
+                            </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -648,7 +648,7 @@
                                 </h2>
                         </div>
 
-                        <!-- <div id="collapse_3" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_3" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                 <div class="card-body">
                                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                     squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -659,7 +659,7 @@
                                     butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                     nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                 </div>
-                            </div> -->
+                            </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -672,7 +672,7 @@
                                 </h2>
                         </div>
 
-                        <!-- <div id="collapse_4" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_4" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                 <div class="card-body">
                                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                     squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -683,7 +683,7 @@
                                     butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                     nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                 </div>
-                            </div> -->
+                            </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -697,7 +697,7 @@
                                 </h2>
                         </div>
 
-                        <!-- <div id="collapse_5" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_5" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                 <div class="card-body">
                                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                     squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -708,7 +708,7 @@
                                     butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                     nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                 </div>
-                            </div> -->
+                            </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -722,7 +722,7 @@
                                 </h2>
                         </div>
 
-                        <!-- <div id="collapse_6" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_6" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                 <div class="card-body">
                                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                     squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -733,7 +733,7 @@
                                     butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                     nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                 </div>
-                            </div> -->
+                            </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -747,7 +747,7 @@
                                 </h2>
                         </div>
 
-                        <!-- <div id="collapse_7" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_7" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                 <div class="card-body">
                                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                     squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -758,7 +758,7 @@
                                     butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                     nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                 </div>
-                            </div> -->
+                            </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -772,7 +772,7 @@
                                 </h2>
                         </div>
 
-                        <!-- <div id="collapse_8" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_8" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                 <div class="card-body">
                                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                     squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -783,7 +783,7 @@
                                     butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                     nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                 </div>
-                            </div> -->
+                            </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -797,7 +797,7 @@
                                 </h2>
                         </div>
 
-                        <!-- <div id="collapse_9" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_9" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                 <div class="card-body">
                                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                     squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -808,7 +808,7 @@
                                     butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                     nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                 </div>
-                            </div> -->
+                            </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -822,7 +822,7 @@
                                 </h2>
                         </div>
 
-                        <!-- <div id="collapse_10" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_10" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                 <div class="card-body">
                                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                     squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -833,7 +833,7 @@
                                     butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                     nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                 </div>
-                            </div> -->
+                            </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -847,7 +847,7 @@
                                 </h2>
                         </div>
 
-                        <!-- <div id="collapse_11" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_11" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                 <div class="card-body">
                                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                     squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -858,7 +858,7 @@
                                     butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                     nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                 </div>
-                            </div> -->
+                            </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -872,7 +872,7 @@
                                 </h2>
                         </div>
 
-                        <!-- <div id="collapse_12" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_12" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                 <div class="card-body">
                                     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                     squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -883,7 +883,7 @@
                                     butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                     nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                 </div>
-                            </div> -->
+                            </div>
                     </div>
                     <a href="#consultation" class="btn btn-success btn-lg w-100 mt-5">Хочу стать ТОП-менеджером!</a>
                 </div>
