--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
                             </h2>
                         </div>
 
-                        <!-- <div id="collapse_1" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_1" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -837,7 +837,7 @@
                                 butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                 nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -851,7 +851,7 @@
                             </h2>
                         </div>
 
-                        <!-- <div id="collapse_2" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_2" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -862,7 +862,7 @@
                                 butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                 nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -876,7 +876,7 @@
                             </h2>
                         </div>
 
-                        <!-- <div id="collapse_3" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_3" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -887,7 +887,7 @@
                                 butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                 nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -900,7 +900,7 @@
                             </h2>
                         </div>
 
-                        <!-- <div id="collapse_4" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_4" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -911,7 +911,7 @@
                                 butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                 nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -925,7 +925,7 @@
                             </h2>
                         </div>
 
-                        <!-- <div id="collapse_5" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_5" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -936,7 +936,7 @@
                                 butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                 nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -950,7 +950,7 @@
                             </h2>
                         </div>
 
-                        <!-- <div id="collapse_6" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_6" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -961,7 +961,7 @@
                                 butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                 nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -975,7 +975,7 @@
                             </h2>
                         </div>
 
-                        <!-- <div id="collapse_7" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_7" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -986,7 +986,7 @@
                                 butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                 nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -1000,7 +1000,7 @@
                             </h2>
                         </div>
 
-                        <!-- <div id="collapse_8" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_8" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -1011,7 +1011,7 @@
                                 butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                 nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -1025,7 +1025,7 @@
                             </h2>
                         </div>
 
-                        <!-- <div id="collapse_9" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_9" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -1036,7 +1036,7 @@
                                 butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                 nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -1050,7 +1050,7 @@
                             </h2>
                         </div>
 
-                        <!-- <div id="collapse_10" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_10" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -1061,7 +1061,7 @@
                                 butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                 nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -1075,7 +1075,7 @@
                             </h2>
                         </div>
 
-                        <!-- <div id="collapse_11" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_11" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -1086,7 +1086,7 @@
                                 butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                 nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -1100,7 +1100,7 @@
                             </h2>
                         </div>
 
-                        <!-- <div id="collapse_12" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div id="collapse_12" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                             <div class="card-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
@@ -1111,7 +1111,7 @@
                                 butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
                                 nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <a href="#sec_tariffs" class="btn btn-success btn-lg w-100 mt-5">Хочу стать ТОП-менеджером!</a>
                 </div>
