--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <div class="dropdown-divider"></div>
                         <div class="b-card-footer">
                             <div class="counter"></div>
-                            <a class="link btn btn-blue" href="#">Подробнее</a>
+                            <a class="link btn btn-blue" href="https://www.instagram.com/vospitanies">Подробнее</a>
                         </div>
                     </div>
                 </div>
