--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                     <td>101</td>
                                     <td>3</td>
                                     <td>6</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/profile.php?id=100001394628319" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">2</th>
@@ -226,7 +226,7 @@
                                     <td>98</td>
                                     <td>6</td>
                                     <td>9</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/profile.php?id=100001394628319" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">3</th>
@@ -234,7 +234,7 @@
                                     <td>11</td>
                                     <td>3</td>
                                     <td>4</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/profile.php?id=100001394628319" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">4</th>
@@ -242,7 +242,7 @@
                                     <td>76</td>
                                     <td>1</td>
                                     <td>11</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/profile.php?id=100001394628319" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">5</th>
@@ -250,7 +250,7 @@
                                     <td>4</td>
                                     <td>0</td>
                                     <td>20</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/profile.php?id=100001394628319" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">5</th>
@@ -258,7 +258,7 @@
                                     <td>4</td>
                                     <td>0</td>
                                     <td>20</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/profile.php?id=100001394628319" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">5</th>
@@ -266,7 +266,7 @@
                                     <td>4</td>
                                     <td>0</td>
                                     <td>20</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/profile.php?id=100001394628319" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">5</th>
@@ -274,7 +274,7 @@
                                     <td>4</td>
                                     <td>0</td>
                                     <td>20</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/profile.php?id=100001394628319" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -628,7 +628,7 @@
                 </div>
                 <div class="col-md-6 img_wrapp2">
                     <img src="img/sec_your_mentor/mihail.jpg" alt="mihail">
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScVXUQ_olTXZR5q2zVrv1r8VocfurvAWbU22sPSLkleocYyWg/viewformи" class="btn btn-success">Да хочу!</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScVXUQ_olTXZR5q2zVrv1r8VocfurvAWbU22sPSLkleocYyWg/viewform" class="btn btn-success">Да хочу!</a>
                 </div>
             </div>
         </div>
