photo instead of video

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <div class="row align-items-center justify-content-between">
                 <div class="col col-md-6 left-col">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="img_wrapp">
+                        <img src="img/anna.jpg" alt="SE">
                     </div>
                 </div>
                 <div class="col-xl-7 col-md-6 right-col main-txt">
@@ -225,7 +225,7 @@
             </div>
         </div>
     </section>
-  
+
     <section id="my_articles" class="sec sec_my_articles">
         <div class="container">
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
@@ -281,7 +281,7 @@
                 <img src="img/sec_latest_events/title_label.svg" alt="title_label">
                 <h2>Последние события</h2>
             </div>
-            <div class="row justify-content-between">
+            <div class="row justify-content-center">
                 <div class="col-md-6 card_wrapp">
                     <div class="card">
                         <div class="embed-responsive embed-responsive-16by9">
@@ -363,8 +363,8 @@
                     <img src="img/sec_your_mentor/anna.png" alt="anna">
                 </div>
                 <div class="col-md-6">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="img_wrapp2">
+                        <img src="img/sec_your_mentor/anna.jpg" alt="anna">
                     </div>
                     <a href="#" class="btn btn-success">Да хочу!</a>
                 </div>
